fix: fix the `:hover` issue of cards on mobile phone

--- a/src/components/cards/card.module.css
+++ b/src/components/cards/card.module.css
@@ -55,14 +55,6 @@
 	font-style: normal;
 }
 
-.card:hover .front {
-	opacity: 0.7;
-}
-
-.card:active .front {
-	opacity: 1;
-}
-
 .card:focus-visible {
 	outline: 2px solid var(--outline);
 	outline-offset: 4px;
@@ -96,5 +88,11 @@
 
 	.emoji {
 		font-size: 8.8rem;
+	}
+}
+
+@media (hover: hover) and (pointer: fine) {
+	.card:hover .front {
+		opacity: 0.7;
 	}
 }
